<resources>
    <string name="app_name">SimpleFirestore</string>

    <string name="logged_out">Ausgeloggt</string>
    <string name="logged_in">Eingeloggt</string>

    <string name="alreadyLoggedIn">Sie sind schon eingelogged!</string>
    <string name="alreadyLoggedOut">Sie sind schon ausgelogged!</string>

    <string name="emailHint">Ihre Email-Adresse</string>
    <string name="pwHint">Ihr Passwort</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Neuen Account registrieren</string>
    <string name="textPWReset">Passwort vergessen</string>
    <string name="required">Erfoderlich</string>

    <string name="verify_mail">Eine Bestätigungsemail wurde versendet</string>
    <string name="reminder_verify">Bitte bestätigen Sie noch die E-Mail.</string>
    <string name="login_success">Login Erfolgreich</string>

    <string name="fill_out">Ausfüllen</string>
    <string name="reset_pw">Passwort zurückgesetzt</string>
    <string name="send">Senden</string>
    <string name="forgotPw_title">Passwort vergessen</string>
    <string name="forgotPw_msg">Geben Sie Ihre Email ein.</string>

    <string name="btnSearchDB">Auswerten</string>
    <string name="txt1">Raum</string>
    <string name="txt2">Temperatur</string>
    <string name="txt3">Luftfeuchte</string>
    <string name="txt4">Datum YYYY-MM-DD</string>
    <string name="btn">Speichern</string>
    <string name="eingabefehler">Alle Felder ausfüllen</string>
    <string name="save">gespeichert</string>
    <string name="not_save">nicht gespeichert</string>

    <string name="rbtn1">Raum</string>
    <string name="rbtn2">Temp</string>
    <string name="rbtn3">Datum</string>
    <string name="rbtn4">Top 5</string>
    <string name="rbtn5">Lösche</string>
    <string name="txtFilter">Filterwert oder Lösch-ID</string>
    <string name="txtErklärung">Geben Sie einen Filterwert
        (Raum, Temperatur oder Datum)
        oder eine ID zum Löschen an.
        Für Top 5 müssen Sie keinen Wert angeben.</string>
    <string name="filterwertfehler">kein gültiger Filterwert</string>
    <string name="btnFilter">Filtern/Löschen</string>

</resources>